--- a/public/packages/custom-style/custom-style.css
+++ b/public/packages/custom-style/custom-style.css
@@ -1,5 +1,4 @@
 /*LABEL STYLES*/
-
 .label-style-header {
 	color: white;
 	font-size: 30;
@@ -60,7 +59,15 @@
 	color: Black;
 }
 
+
+
+
 /*TEXTBOX STYLES*/
+.lHeight-1 {
+	line-height: 1;
+}
+
+
 
 
 /*PANEL STYLES*/
@@ -77,8 +84,10 @@
 }
 
 
-/*LINK STYLES*/
 
+
+
+/*LINK STYLES*/
 .h1-uline {
 	text-decoration: none;
 	font-size: 26;
@@ -91,15 +100,30 @@
 	margin-left: 0.375rem;
 }
 
-/*BUTTON STYLES*/
 
+
+
+
+/*BUTTON STYLES*/
 .button-bg-1 {
 	background-color: #f0443e;
 }
 
+
+
+
+
+
+
+
+
 /*FONT STYLES - font family, color, size*/
 .font-style-segoe {
 	font-family: Segoe Ui;
+}
+
+.text-area-row {
+	rows: 5 !important;
 }
 
 .font-size-12 {
