--- a/public/packages/custom-style/custom-style.css
+++ b/public/packages/custom-style/custom-style.css
@@ -4,6 +4,10 @@
 	font-size: 30;
 }
 
+.label-inblock {
+	display: inline-block;
+}
+
 .img-margin {
 	margin-left: -1.5rem;
 }
@@ -62,12 +66,14 @@
 
 
 
-/*TEXTBOX STYLES*/
+/*INPUT STYLES*/
 .lHeight-1 {
 	line-height: 1 !important;
 }
 
-
+.mTop-07 {
+	margin-top: 0.7rem;
+}
 
 
 /*PANEL STYLES*/
