--- a/public/packages/foundation-5.4.7/css/foundation.css
+++ b/public/packages/foundation-5.4.7/css/foundation.css
@@ -1090,7 +1090,7 @@ button, .button {
   border-style: solid;
   border-width: 0px;
   cursor: pointer;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: Trebuchet MS, Arial, 'Helvetica', sans-serif;
   font-weight: normal;
   line-height: normal;
   margin: 0 0 1.25rem;
@@ -2716,7 +2716,7 @@ meta.foundation-mq-topbar {
   margin-bottom: 1.25rem;
   padding: 1.25rem;
   background: #f2f2f2;
-  color: #333333; }
+  color: #ddd; }
   .panel > :first-child {
     margin-top: 0; }
   .panel > :last-child {
@@ -3414,8 +3414,7 @@ ul.pagination {
   margin: 0;
   padding: 0.875rem 0;
   list-style-type: none;
-  list-style-position: outside;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif; }
+  list-style-position: outside;}
   .side-nav li {
     margin: 0 0 0.4375rem 0;
     font-size: 0.875rem;
@@ -5079,8 +5078,9 @@ ul.off-canvas-list {
   border: solid 1px #cccccc;
   font-size: 0.875rem;
   z-index: 89;
-  margin-top: 2px;
-  max-width: 200px; }
+  margin-top: 8px;
+  max-width: 215px; 
+  margin-left: -0.8rem !important}
   .f-dropdown > *:first-child {
     margin-top: 0; }
   .f-dropdown > *:last-child {
@@ -5095,7 +5095,7 @@ ul.off-canvas-list {
     border-bottom-style: solid;
     position: absolute;
     top: -12px;
-    left: 10px;
+    left: 90px !important;
     z-index: 89; }
   .f-dropdown:after {
     content: "";
@@ -5107,7 +5107,7 @@ ul.off-canvas-list {
     border-bottom-style: solid;
     position: absolute;
     top: -14px;
-    left: 9px;
+    left: 89px !important;
     z-index: 88; }
   .f-dropdown.right:before {
     left: auto;
@@ -5332,7 +5332,10 @@ table {
     color: #222222;
     text-align: left; }
   table tr.even, table tr.alt, table tr:nth-of-type(even) {
-    background: #f9f9f9; }
+
+    border-top-color: #ddd;
+
+  }
   table thead tr th,
   table tfoot tr th,
   table tfoot tr td,
