--- a/public/packages/DataTables-1.10.4/media/css/jquery.dataTables.css
+++ b/public/packages/DataTables-1.10.4/media/css/jquery.dataTables.css
@@ -15,13 +15,16 @@ table.dataTable {
    * Body styles
    */
 }
+
 table.dataTable thead th,
 table.dataTable tfoot th {
   font-weight: bold;
+
 }
 table.dataTable thead th,
 table.dataTable thead td {
   padding: 10px 18px;
+  text-align: center;
 }
 table.dataTable thead th:active,
 table.dataTable thead td:active {
@@ -62,6 +65,7 @@ table.dataTable tbody tr.selected {
 table.dataTable tbody th,
 table.dataTable tbody td {
   padding: 8px 10px;
+  text-align: center;
 }
 table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
   border-top: 1px solid #dddddd;
@@ -249,6 +253,7 @@ table.dataTable thead td.dt-head-right,
 table.dataTable tfoot th.dt-head-right,
 table.dataTable tfoot td.dt-head-right {
   text-align: right;
+
 }
 table.dataTable thead th.dt-head-justify,
 table.dataTable thead td.dt-head-justify,
