--- a/public/packages/custom-style/custom-style.css
+++ b/public/packages/custom-style/custom-style.css
@@ -11,6 +11,14 @@
 	margin: 5px 0;
 }
 
+/*.notif-separator {
+display: block;
+border-top: 1px solid #CCC;
+border-bottom: 1px solid #FFF;
+height: 0;
+margin: 5px 0;
+}*/
+
 .separator-width {
 	margin-left: -1.3rem !important;
 	margin-right: -1.3rem !important;
@@ -28,6 +36,13 @@
 
 .icon-mrgn {
 	margin-left: 1rem;
+}
+
+.icon-notif {
+	margin-left: 81rem;
+	line-height: 0rem;
+	margin-top: -0.5rem;
+	color: #337ab7
 }
 
 .err-icn-lheight {
@@ -174,6 +189,17 @@
 
 /*PANEL STYLES*/
 
+.modal-title {
+	margin-top: -1.9rem !important;
+	margin-left: -1.9rem;
+	margin-right: -1.9rem;
+	background-color: white;
+	border-color: #ddd;
+	margin-bottom: 2.8rem;
+	border-bottom-right-radius: 0 !important;
+	border-bottom-left-radius: 0 !important;
+}
+
 .panel-bg-white {
 	background-color: White !important;
 }
@@ -241,6 +267,32 @@
 
 }
 
+a.notif:hover {
+	display: inline-block;
+	width: 107.95%;
+	background-color: #e7ebf2;
+	padding-left: 10px;
+}
+a.sn-bg {
+	background-color: #c4c4c4;
+}
+a.cnt:first-child {
+	border-top-style: solid;
+	border-top-color: #ddd;
+}
+
+a.cnt {
+	width: 107.95%;
+	display: inline-block;
+	margin-left: -30.35px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	border-bottom-style: solid;
+	border-bottom-color: #ddd;
+	border-bottom-width: 1px;
+}
+
 .homepage-link {
 	margin-top: -1.3rem !important;
 	font-size: 13px !important; 
@@ -288,6 +340,8 @@ margin-top: -1rem !important;
 
 
 /* MARGINS */
+
+
 
 .panel-border {
 	border-color: #333333;
@@ -455,6 +509,10 @@ margin-top: -1rem !important;
 	line-height: 2;
 }
 
+.line-height-3 {
+	line-height: 2.4;
+}
+
 .text-lineHeight {
 	line-height: 2.5;
 }
@@ -467,6 +525,34 @@ margin-top: -1rem !important;
 	line-height: 3;
 }
 
+
+input[type=search]:focus, textarea:focus {
+	box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+	border: 1px solid rgba(81, 203, 238, 1);
+}
+
+input[type="search"], textarea {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0px;
+  background-color: white;
+  font-family: inherit;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 3px;
+  border-color: #cccccc;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.75);
+  display: block;
+  font-size: 0.875rem;
+  margin: 0 0 1rem 0;
+  padding: 0.5rem;
+  height: 1.3125rem;
+  width: 100%;
+  margin-right: 3rem;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  transition: box-shadow 0.45s, border-color 0.45s ease-in-out; }
 
 input[type=text]:focus, textarea:focus {
 	box-shadow: 0 0 5px rgba(81, 203, 238, 1);
@@ -484,4 +570,13 @@ input[type=password]:focus, textarea:focus {
     border-top-style: solid; 
     border-top-width: 1px;
     border-bottom-color: #ddd;
+}
+
+.badge {
+	background-color: #337ab7;
+	padding-left: 5px;
+	padding-right: 5px;
+	border-radius: 5px;
+	color: White;
+	margin-left: 55px
 }
