Major Changes #2 - Changed top New Applicant notification to sidebar, Theme - laravel, refresh div in new applicants, login & registration button.

--- a/public/packages/custom-style/custom-style.css
+++ b/public/packages/custom-style/custom-style.css
@@ -11,13 +11,6 @@
 	margin: 5px 0;
 }
 
-/*.notif-separator {
-display: block;
-border-top: 1px solid #CCC;
-border-bottom: 1px solid #FFF;
-height: 0;
-margin: 5px 0;
-}*/
 
 .separator-width {
 	margin-left: -1.3rem !important;
@@ -25,6 +18,10 @@ margin: 5px 0;
 }
 
 /*LABEL STYLES*/
+.laravel-fnt {
+	color: #f4645f !important;
+}
+
 
 .welcome-label {
 	margin-left: 52.1rem;
@@ -200,8 +197,9 @@ margin: 5px 0;
 	border-bottom-left-radius: 0 !important;
 }
 
-.panel-bg-white {
-	background-color: White !important;
+.title-panel {
+	background-color: #f4726d !important;
+	border-color: #f4726d;
 }
 
 .header-2 {
@@ -225,7 +223,8 @@ margin: 5px 0;
 }
 
 .header {
-	background-color: #333;
+	background-color: #f4645f;
+	border-color: #f4645f;
 }
 
 .topBar-style {
@@ -264,7 +263,11 @@ margin: 5px 0;
 .h1-uline {
 	text-decoration: none;
 	font-size: 26;
+}
 
+a.user {
+	text-decoration: underline;
+	color: White;
 }
 
 a.notif:hover {
@@ -294,7 +297,7 @@ a.cnt {
 }
 
 .homepage-link {
-	margin-top: -1.3rem !important;
+	margin-top: -1rem !important;
 	font-size: 13px !important; 
 }
 
@@ -309,7 +312,31 @@ a.cnt {
 }
 
 
+/*CUSTOM PUSH*/
+
+.c-pull-1 {
+	position: relative;
+	right: 12.5%;
+	left: auto;
+}
+
 /*BUTTON STYLES*/
+
+.login-btn {
+	background: #ad4844;
+	color: White;
+}
+
+.login-btn:hover {
+	background: #fff;
+	color: #f4645f;
+	opacity: 1;
+}
+
+.title-button {
+	background-color: transparent;
+	color: White;
+}
 
 .button-tiny {
 padding-top: 0.4rem !important;
@@ -331,9 +358,9 @@ margin-top: -1rem !important;
 	background-color: White !important;
 }
 
-.button-bg-sb:hover {
-	background-color: #333333 !important;
-	color: White!important;
+.title-button:hover {
+	background-color: White !important;
+	color: #f4726d !important;
 }
 
 
@@ -356,8 +383,8 @@ margin-top: -1rem !important;
 	margin-top: -1.4rem !important;
 	margin-left: -1.3rem;
 	margin-right: -1.3rem;
-	background-image: linear-gradient(to bottom,#337ab7 0,#2e6da4 100%);
-	border-color: #3b5998;
+	background-color: #f5f5f5;
+	border-color: #ddd;
 	margin-bottom: 1.8rem;
 	border-bottom-right-radius: 0 !important;
 	border-bottom-left-radius: 0 !important;
@@ -574,9 +601,18 @@ input[type=password]:focus, textarea:focus {
 
 .badge {
 	background-color: #337ab7;
-	padding-left: 5px;
-	padding-right: 5px;
-	border-radius: 5px;
-	color: White;
-	margin-left: 55px
+	padding-left: 5px !important;
+	padding-right: 5px !important;
+	border-radius: 5px !important;
+	color: White !important;
+	margin-left: 50px !important;
+}
+
+
+/* DIVs */
+
+.mainpage-container {
+	background-color: white;
+	margin-top: -3.4rem;
+	padding-bottom: 7rem;
 }
