--- a/public/packages/custom-style/custom-style.css
+++ b/public/packages/custom-style/custom-style.css
@@ -442,6 +442,10 @@ margin-top: -1rem !important;
 	font-size: 24px !important;
 }
 
+.size-20 {
+	font-size: 20px !important;
+}
+
 .size-18 {
 	font-size: 18px !important;
 }
